--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern old School</title>
+    <title>School</title>
     <style>
         body {
             background-color: #2c2c2c;
@@ -38,3 +38,4 @@
     <a href="fetch_all_students.html" class="button">View All Students</a>
 </body>
 </html>
+
